name:           ServiceLane
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         d.koniajev

executable ServiceLane
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   array >=0.4.0 && <0.5
  ghc-options:     -Wall

